--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
   # been specified, include it in the publish directory path.
   publish = "build"
   # Default build command.
-  command = "ng build --prod"
+  command = "npm run build"
 # If skip_processing = true, all other settings are ignored
 [build.processing]
   skip_processing = false
